# ell_prompt_ab_testing

./: .env.example  .gitignore  LICENSE  README.md  final_newsletter.md  nieuwsuuralgemeen_filtered.json  nosnieuwsbuitenland_filtered.json  nosnieuwsopmerkelijk_filtered.json  nosnieuwspolitiek_filtered.json  prompt.md  pyproject.toml  table_structure.md
src/ell_boilerplate/: __init__.py  config.py  main.py
src/ell_boilerplate/models/: functionstructures.py  llm_response_structure.py
src/ell_boilerplate/step_by_step/: simple_summary.py
src/ell_boilerplate/utils/: datastructure.py  evaluation.py  evaluations_table.py  feeds.py  get_rss_feeds.py
